# enterprise-ai-coworker

./: .gitignore  README.md
backend/: agent.py  analytics.py  cache.py  main.py  mcp_server.py  pyproject.toml  tools.py
frontend/: .prettierrc  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
