[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "mcp>=1.27.2",
    "openai>=2.38.0",
    "opentelemetry-sdk>=1.42.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.48.0",
]
